--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port = 8080
+server.port = 8080
 spring.datasource.url= jdbc:postgresql://localhost:5432/myDb
 spring.datasource.username= myUser
 spring.datasource.password=38278857
